<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fgallet2016.europcar.Fragment.ConnexionFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse_mail_connexion"/>

        <EditText
            android:id="@+id/adresse_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_connexion"/>

        <EditText
            android:id="@+id/mot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token_connexion"/>

        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/se_connecter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouton_connecter_connexion"/>

            <Button
                android:id="@+id/bouton_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouton_inscription_connexion"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
